force-app/main/default/objects/GPOS_Grower_Temp__c/GPOS_Grower_Temp__c.object-meta.xml
<CustomObject>
    <label>GPOS Grower Temp</label>
    <nameField>
        <label>GPOS Grower Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPOS Grower Temps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>