force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GPOS Grower Temps</relationshipLabel>
    <relationshipName>GPOS_Grower_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>