force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Dealer_Alternate_Address__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Alternate_Address__c</fullName>
    <label>Dealer Alternate Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>