force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Dealer_City__c.field-meta.xml
<CustomField>
    <fullName>Dealer_City__c</fullName>
    <label>Dealer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>