force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Dealer_State__c.field-meta.xml
<CustomField>
    <fullName>Dealer_State__c</fullName>
    <label>Dealer State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>