force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Dealer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Summary__c</fullName>
    <label>Dealer Summary</label>
    <referenceTo>Dealer_Summary__c</referenceTo>
    <relationshipLabel>GPOS Grower Temps</relationshipLabel>
    <relationshipName>GPOS_Grower_Temps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>