force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Dealer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Zip_Code__c</fullName>
    <label>Dealer Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>