force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Grower__c.field-meta.xml
<CustomField>
    <fullName>Grower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GPOS Grower Temps (Grower)</relationshipLabel>
    <relationshipName>GPOS_Grower_Temps1</relationshipName>
    <type>Lookup</type>
</CustomField>