force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Grower_Address__c.field-meta.xml
<CustomField>
    <fullName>Grower_Address__c</fullName>
    <label>Grower Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>