force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Grower_City__c.field-meta.xml
<CustomField>
    <fullName>Grower_City__c</fullName>
    <label>Grower City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>