force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Grower_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Grower_Phone_Number__c</fullName>
    <label>Grower Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>