force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Grower_State__c.field-meta.xml
<CustomField>
    <fullName>Grower_State__c</fullName>
    <label>Grower State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>