force-app/main/default/objects/GPOS_Grower_Temp__c/fields/Grower_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Grower_Zip_Code__c</fullName>
    <label>Grower Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>